[package]
name = "monero"
description = "Rust Monero Library."
keywords = ["monero"]
version = "0.12.0"
authors = ["h4sh3d <h4sh3d@protonmail.com>"]
license = "MIT"
homepage = "https://github.com/monero-rs/monero-rs"
repository = "https://github.com/monero-rs/monero-rs"
documentation = "https://docs.rs/monero"
readme = "README.md"
include = [
    "src/*",
    "README.md",
    "LICENSE",
]

edition = "2018"

[features]
default = ["full"]
full = ["fixed-hash/std", "fixed-hash/rand", "rand/std"]
serde_support = ["serde", "serde-big-array"]

[dependencies]
hex = "0.4.3"
hex-literal = "0.3.1"
keccak-hash = "0.7.0"
tiny-keccak = "2"
base58-monero = { version = "0.3", default-features = false }
serde = { version = "1.0.124", features = ["derive"], optional = true }
serde-big-array = { version = "0.3.2", optional = true }
curve25519-dalek = { version = "3.0.2", features = ["serde"] }
thiserror = "1.0.24"
subtle = { version = "2", default-features = false }
hash_edwards_to_edwards = { git = "https://github.com/comit-network/hash_edwards_to_edwards" }
integer-encoding = "3"
rand = { version = "0.7", optional = true }
conquer-once = "0.3"
clear_on_drop = { version = "0.2", default-features = false }
itertools = "0.10"

[dependencies.fixed-hash]
version = "0.7.0"
default-features = false

[dev-dependencies]
rand = { version = "0.7", features = ["std"] }
serde_json = "1"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[patch.crates-io]
curve25519-dalek = { git = "https://github.com/thomaseizinger/curve25519-dalek", rev = "8cc9ad36bd30ceab6073ff64655473c6b5aa4aab" }
